proper display of layers fixed

--- a/index.html
+++ b/index.html
@@ -136,18 +136,28 @@
 				</div>
 				<div class="each-item img2">
 					<div class="layer"></div>
+					<i class="fab fa-github fa-3x"></i>
+					<i class="fas fa-eye fa-3x"></i>
 				</div>
 				<div class="each-item img3">
 					<div class="layer"></div>
+					<i class="fab fa-github fa-3x"></i>
+					<i class="fas fa-eye fa-3x"></i>
 				</div>
 				<div class="each-item img4">
 					<div class="layer"></div>
+					<i class="fab fa-github fa-3x"></i>
+					<i class="fas fa-eye fa-3x"></i>
 				</div>
 				<div class="each-item img5">
 					<div class="layer"></div>
+					<i class="fab fa-github fa-3x"></i>
+					<i class="fas fa-eye fa-3x"></i>
 				</div>
 				<div class="each-item img6">
 					<div class="layer"></div>
+					<i class="fab fa-github fa-3x"></i>
+					<i class="fas fa-eye fa-3x"></i>
 				</div>
 				<!-- miniaturka każdego projektu pod tym layer wysuwany od dołu z linkiem do live wersji i githuba -->
 			</div>
