--- a/index.html
+++ b/index.html
@@ -165,14 +165,22 @@
 <!-- CONTACT -->
 		<section class="contact" id="contact">
 			<div class="container">
-				<h1>Kontakt</h1>
-				<p>Zapraszam osoby zainteresowane do kontaktu poprzez </p>
+				<div class="contact-text">
+					<h1>Kontakt</h1>
+					<p>Zainteresowane osoby zapraszam do kontaktu poprzez e-mail oraz na mój profil GitHub</p>
+				</div>
+				<div class="e-mail">
+					<h3>sebulw@gmail.com</h3>
+				</div>
+				<div class="github">
+					<a href="https://github.com/Sebulw" target="_blank"><i class="fab fa-github fa-7x"></i></a>
+				</div>
 				<!-- e-mail, facebook, linkedIN -->
 			</div>
 		</section>
 <!-- FOOTER -->
 		<footer>
-			<!-- copyrights czy coś w ten deseń 2017 i tyle -->
+			<h3>Sebastian Wojnicz 2018 Copyright ©. All Rights Reserved.</h3>
 		</footer>
 	</body>
 </html>
