path to images changed

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<h1>Sebastian Wojnicz</h1>
 					<h3>Junior Front-End Developer</h3>
 				</div>
-				<img src="../images/my-photo.JPG" alt="My Photo" height="250" width="250">
+				<img src="images/my-photo.jpg" alt="My Photo" height="250" width="250">
 				<!-- zdjęcie nachodzi na header/nawigację (naprawić) -->
 			</div>
 		</section>
