path to html images changed

--- a/index.html
+++ b/index.html
@@ -56,66 +56,66 @@
 				<!-- HTML5, CSS3, -BOOTSTRAP-, SASS, GIT, GITHUB, JS, JQUERY, -AJAX-, -API- + sprawdzić o czym zapomniałem -->
 			<div class="known">
 				<div class="html5 each-skill">
-					<img src="../images/skill icons/html5.png" alt="HTML5">
+					<img src="images/skill icons/html5.png" alt="HTML5">
 					<h4>HTML5</h4>
 				</div>
 				<div class="css3 each-skill">
-					<img src="../images/skill icons/css3.png" alt="CSS3">
+					<img src="images/skill icons/css3.png" alt="CSS3">
 					<h4>CSS3</h4>
 				</div>
 				<div class="rwd each-skill">
-					<img src="../images/skill icons/rwd.png" alt="Responsive Web Design" height="100" width="100">
+					<img src="images/skill icons/rwd.png" alt="Responsive Web Design" height="100" width="100">
 					<h4>RWD</h4>
 				</div>
 				<div class="bootstrap each-skill">
-					<img src="../images/skill icons/bootstrap.png" alt="Bootstrap" height="80" width="80">
+					<img src="images/skill icons/bootstrap.png" alt="Bootstrap" height="80" width="80">
 					<h4>Bootstrap</h4>
 				</div>
 				<div class="sass each-skill">
-					<img src="../images/skill icons/sass.png" alt="Sass" height="80" width="80">
+					<img src="images/skill icons/sass.png" alt="Sass" height="80" width="80">
 					<h4>Sass</h4>
 				</div>
 				<div class="grunt each-skill">
-					<img src="../images/skill icons/grunt.png" alt="Grunt" height="90" width="80">
+					<img src="images/skill icons/grunt.png" alt="Grunt" height="90" width="80">
 					<h4>Grunt</h4>
 				</div>
 				<div class="git each-skill">
-					<img src="../images/skill icons/git.png" alt="Git">
+					<img src="images/skill icons/git.png" alt="Git">
 					<h4>Git</h4>
 				</div>
 				<div class="github each-skill">
-					<img src="../images/skill icons/github.png" alt="GitHub" height="70" width="70">
+					<img src="images/skill icons/github.png" alt="GitHub" height="70" width="70">
 					<h4>GitHub</h4>
 				</div>
 				<div class="javascript each-skill">
-					<img src="../images/skill icons/js.png" alt="JavaScript" height="90" width="90">
+					<img src="images/skill icons/js.png" alt="JavaScript" height="90" width="90">
 					<h4>JavaScript</h4>
 				</div>
 				<div class="jquery each-skill">
-					<img src="../images/skill icons/jq.png" alt="jQuery">
+					<img src="images/skill icons/jq.png" alt="jQuery">
 					<h4>jQuery</h4>
 				</div>
 				<div class="ajax each-skill">
-					<img src="../images/skill icons/ajax.png" alt="AJAX" height="70" width="140">
+					<img src="images/skill icons/ajax.png" alt="AJAX" height="70" width="140">
 					<h4>AJAX</h4>
 				</div>
 				<div class="api each-skill">
-					<img src="../images/skill icons/api.jpg" alt="API" height="70" width="140">
+					<img src="images/skill icons/api.jpg" alt="API" height="70" width="140">
 					<h4>API</h4>
 				</div>
 			</div>
 			<div class="to-learn">
 				<p>Technologie których się uczę lub w niedalekiej przyszłości zamierzam się uczyć</p>
 				<div class="react">
-					<img src="../images/skill icons/react.png" alt="React">
+					<img src="images/skill icons/react.png" alt="React">
 					<h4>React</h4>
 				</div>
 				<div class="node">
-					<img src="../images/skill icons/node.png" alt="Node">
+					<img src="images/skill icons/node.png" alt="Node">
 					<h4>Node</h4>
 				</div>
 				<div class="wordpress">
-					<img src="../images/skill icons/wordpress.png" alt="WordPress" height="70" width="70">
+					<img src="images/skill icons/wordpress.png" alt="WordPress" height="70" width="70">
 					<h4>WordPress</h4>
 				</div>
 			</div>
