API icon path changed for capital letters

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 					<h4>AJAX</h4>
 				</div>
 				<div class="api each-skill">
-					<img src="images/skill icons/api.jpg" alt="API" height="70" width="140">
+					<img src="images/skill icons/API.jpg" alt="API" height="70" width="140">
 					<h4>API</h4>
 				</div>
 			</div>
