--- a/index.html
+++ b/index.html
@@ -129,14 +129,14 @@
 				</div>
 				<div class="each-item img1">
 					<div class="layer"></div>
-					<i class="fab fa-github fa-3x"></i>
-					<i class="fas fa-eye fa-3x"></i>
+					<a href="https://github.com/Sebulw/zadanie_12_7"><i class="fab fa-github fa-3x"></i></a>
+					<a href="https://sebulw.github.io/zadanie_12_7/"><i class="fas fa-eye fa-3x"></i></a>
 					<!-- icony z linkiem do live i git hub'a -->
 				</div>
 				<div class="each-item img2">
 					<div class="layer"></div>
-					<i class="fab fa-github fa-3x"></i>
-					<i class="fas fa-eye fa-3x"></i>
+					<a href="https://github.com/Sebulw/mache"><i class="fab fa-github fa-3x"></i></a>
+					<a href="https://sebulw.github.io/mache/"><i class="fas fa-eye fa-3x"></i></a>
 				</div>
 				<div class="each-item img3">
 					<div class="layer"></div>
